--- a/Abbohubb/templates/login.html
+++ b/Abbohubb/templates/login.html
@@ -29,7 +29,7 @@
         }
 
         h2 {
-            color: #9133bb;
+            color: #8968cd;
             margin-bottom: 20px;
         }
 
@@ -54,7 +54,7 @@
         }
 
         button {
-            background-color: #9133bb;
+            background-color: #8968cd;
             color: white;
             border: none;
             padding: 10px;
@@ -88,7 +88,7 @@
         .back-link {
             display: block;
             margin-top: 15px;
-            color: #9133bb;
+            color: #8968cd;
             text-decoration: none;
             font-size: 0.9rem;
         }
