--- a/Abbohubb/templates/vergelijk.html
+++ b/Abbohubb/templates/vergelijk.html
@@ -24,7 +24,7 @@
 
         /* Hoofdnavigatie */
         nav {
-            background-color: #9133bb;
+            background-color: #8968cd;
             padding: 10px 0;
         }
         nav ul {
@@ -47,7 +47,7 @@
         }
 
         header {
-            background-color: #9133bb;
+            background-color: #8968cd;
             color: white;
             padding: 20px 0;
             text-align: center;
@@ -100,7 +100,7 @@
             font-weight: bold;
         }
         .vergelijk-tabel thead {
-            background-color: #9133bb;
+            background-color: #8968cd;
             color: white;
         }
         .vergelijk-tabel th, .vergelijk-tabel td {
@@ -119,7 +119,7 @@
             background-color: #e9ffe9;
         }
         .vergelijk-tabel a {
-            color: #9133bb;
+            color: #8968cd;
             text-decoration: none;
             font-weight: bold;
         }
