--- a/Abbohubb/templates/admin_dashboard.html
+++ b/Abbohubb/templates/admin_dashboard.html
@@ -17,7 +17,7 @@
             color: #333;
         }
         nav {
-            background-color: #9133bb;
+            background-color: #8968cd;
             padding: 10px 0;
         }
         nav ul {
@@ -52,7 +52,7 @@
             margin-right: 10px;
             margin-bottom: 10px;
             padding: 10px 15px;
-            background-color: #9133bb;
+            background-color: #8968cd;
             color: #fff;
             text-decoration: none;
             border-radius: 4px;
