--- a/Abbohubb/templates/berichten.html
+++ b/Abbohubb/templates/berichten.html
@@ -24,7 +24,7 @@
 
         h1 {
             text-align: center;
-            color: #4CAF50;
+            color: #8968cd;
             margin-bottom: 20px;
         }
 
