--- a/Abbohubb/templates/logs.html
+++ b/Abbohubb/templates/logs.html
@@ -14,7 +14,7 @@
       color: #333;
     }
     nav {
-      background-color: #4CAF50;
+      background-color: #8968cd;
       padding: 10px 0;
     }
     nav ul {
