--- a/Abbohubb/templates/contact.html
+++ b/Abbohubb/templates/contact.html
@@ -15,7 +15,7 @@
             color: #333;
         }
         nav {
-            background-color: #4CAF50;
+            background-color: #8968cd;
             padding: 10px 0;
         }
         nav ul {
@@ -48,7 +48,7 @@
         h1 {
             margin-top: 0;
             text-align: center;
-            color: #4CAF50;
+            color: #8968cd;
         }
         form label {
             display: block;
@@ -62,7 +62,7 @@
             border-radius: 4px;
         }
         form button {
-            background-color: #4CAF50;
+            background-color: #8968cd;
             color: white;
             padding: 10px 15px;
             border: none;
@@ -72,7 +72,7 @@
             margin-top: 15px;
         }
         form button:hover {
-            background-color: #45a049;
+            background-color: #8968cd;
         }
 
         .flash-container {
