--- a/Abbohubb/templates/vergelijk.html
+++ b/Abbohubb/templates/vergelijk.html
@@ -194,6 +194,7 @@
         } 
     </style>
 </head>
+<link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRGH8P6W"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
