--- a/Abbohubb/templates/abonnement_reviews.html
+++ b/Abbohubb/templates/abonnement_reviews.html
@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ abonnement.naam }} - Abonnementsinformatie</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
   <style>
     /* Reset & basisstijlen */
     *, *::before, *::after {
