--- a/Abbohubb/templates/index.html
+++ b/Abbohubb/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+  <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -8,6 +9,16 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-NRGH8P6W');</script>
   <!-- End Google Tag Manager -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "AbboHub",
+      "url": "https://abbohub.nl",
+      "logo": "https://abbohub.nl/static/logo.png"
+    }
+    </script>
+    
     <meta charset="UTF-8">
     <meta name="description" content="Bij AbboHub vind je snel en eenvoudig alle abonnementen in diverse categorieën. Vergelijk, filter en vind het abonnement dat bij jou past!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
